[gd_scene load_steps=3 format=3 uid="uid://doelj8l0np2ll"]

[ext_resource type="Script" uid="uid://1laswlgjr8wp" path="res://scenes/UI_files/main_menu.gd" id="1_0rarv"]
[ext_resource type="PackedScene" uid="uid://elqkk8xiflsj" path="res://scenes/UI_files/game_of_life.tscn" id="2_58kj1"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource("1_0rarv")

[node name="GameOfLife" parent="." instance=ExtResource("2_58kj1")]

[node name="PrimaryMenu" type="Control" parent="."]
unique_name_in_owner = true
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="ColorRect" type="ColorRect" parent="PrimaryMenu"]
layout_mode = 2
offset_left = 490.0
offset_top = 258.0
offset_right = 663.0
offset_bottom = 393.0
color = Color(0.187176, 0.187176, 0.187176, 1)

[node name="MenuSelect" type="VBoxContainer" parent="PrimaryMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 469.5
offset_top = 240.0
offset_right = 642.5
offset_bottom = 368.0
grow_horizontal = 2
grow_vertical = 2

[node name="Title" type="Label" parent="PrimaryMenu/MenuSelect"]
layout_mode = 2
text = "Emergent Phenomena"

[node name="VBoxContainer" type="VBoxContainer" parent="PrimaryMenu/MenuSelect"]
layout_mode = 2

[node name="PlayButton" type="Button" parent="PrimaryMenu/MenuSelect/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Play"

[node name="SettingsButton" type="Button" parent="PrimaryMenu/MenuSelect/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Settings"

[node name="QuitButton" type="Button" parent="PrimaryMenu/MenuSelect/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Quit"

[node name="SettingsMenu" type="Control" parent="."]
unique_name_in_owner = true
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="ColorRect" type="ColorRect" parent="SettingsMenu"]
layout_mode = 0
offset_left = 461.0
offset_top = 191.0
offset_right = 758.0
offset_bottom = 254.0
color = Color(0.187176, 0.187176, 0.187176, 1)

[node name="Label" type="Label" parent="SettingsMenu"]
layout_mode = 0
offset_left = 469.0
offset_top = 211.0
offset_right = 741.0
offset_bottom = 234.0
text = "This will be settings menu in future"

[node name="CloseSettingsButton" type="Button" parent="SettingsMenu"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 727.0
offset_top = 174.0
offset_right = 735.0
offset_bottom = 182.0
text = "X"
